Implement countdown-style game timer with digital displa in script.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MineSweeper</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=DS-Digital&display=swap" rel="stylesheet">
 </head>
 <body>
          <div class="nav">
@@ -20,7 +21,7 @@
                     😊 
                 </div>
                 <div class="timerGame">
-                    Temporizador
+                    00:00
                 </div>
             </div>
             <div class="grid">
