The error message has been changed from a div to a toast message and game start emoji.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                   <span id="mine-counter">010</span>
                </div>
                <div class="resetGameButton">
-                  😊 
+                  <span class="image">&#x1F600;</span>
                </div>
                <div class="timerGame">
                   00:00
@@ -44,7 +44,8 @@
                   </table>
                </div>
             </div>
-            <div id="errorMsg" class="error"></div>
+            <div id="toast" class="toast">
+            </div>
          </div>
       </div>
       <script src="js/script.js" ></script>
