--- a/index.html
+++ b/index.html
@@ -57,21 +57,29 @@
 
 
       <div class="nav">
-        <div class="selector-dificultad">
-         <label for="dificultad">Dificultad:</label>
-         <select id="dificultad">
-            <option value="facil">Fácil</option>
-            <option value="medio">Medio</option>
-            <option value="dificil">Difícil</option>
-         </select>
-
-         <div class="nav-links">
+      <div class="toggleTheme">
+         <button id="toggleTheme" aria-label="Cambiar modo claro/oscuro">Cambiar modo</button>
+      </div>
+      <div class="nav-links">
             <button id="open-contact-btn" class="button small">Contacto</button>
             <a href="https://github.com/calvoclucas/minesweeper-Fortuna-Rios-Calvo" class="button small" target="_blank">
                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" class="github-icon">GitHub
             </a>
          </div>
       </div>
+      <div class="selector-dificultad">
+         <label for="dificultad">Dificultad:</label>
+         <select id="dificultad">
+            <option value="facil">Fácil</option>
+            <option value="medio">Medio</option>
+            <option value="dificil">Difícil</option>
+         </select>
+      </div>
+      </div>
+
+
+  
+
       <div class="main">
          <div class="container">
             <div class="playButtons">
@@ -92,6 +100,11 @@
                <div class="modal-content">
                   <span class="close">&times;</span>
                   <h2>Ranking</h2>
+                  <label for="ordenarRanking">Ordenar por:</label>
+                     <select id="ordenarRanking">
+                     <option value="score">Puntaje</option>
+                     <option value="date">Fecha</option>
+                  </select>
                   <table class="rankingTable">
                      <thead>
                         <tr>
