removed unused functions and added responsive design

--- a/index.html
+++ b/index.html
@@ -56,17 +56,37 @@
          </div>
       </div>
 
+      <!-- Modal Ranking-->
+      <div id="rankingModal" class="modal">
+         <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Ranking</h2>
+            <label for="ordenarRanking">Ordenar por:</label>
+               <select id="ordenarRanking">
+               <option value="score">Puntaje</option>
+               <option value="date">Fecha</option>
+            </select>
+            <table class="rankingTable">
+               <thead>
+                  <tr>
+                     <th>Jugador</th>
+                     <th>Puntaje</th>
+                     <th>Duración</th>
+                     <th>Fecha</th>
+                  </tr>
+               </thead>
+               <tbody id="rankingBody"></tbody>
+            </table>
+         </div>
+      </div>
 
       <div class="nav">
-      <div class="toggleTheme">
-         <button id="toggleTheme" class="button small" aria-label="Cambiar modo claro/oscuro">Cambiar modo</button>
-      </div>
-      <div class="nav-links">
-            <button id="openContactBtn" class="button small">Contacto</button>
-            <a href="https://github.com/calvoclucas/minesweeper-Fortuna-Rios-Calvo" class="button small" target="_blank">
-               <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" class="github-icon">GitHub
-            </a>
-         </div>
+         <button id="openBtn" class="button small">Ver Ranking</button>
+         <button id="toggleTheme" class="button small">Modo oscuro</button>
+         <button id="openContactBtn" class="button small">Contacto</button>
+         <a href="https://github.com/calvoclucas/minesweeper-Fortuna-Rios-Calvo" class="button small" target="_blank">
+            <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/github.svg" alt="GitHub" class="github-icon">GitHub
+         </a>
       </div>
       <div class="selector-dificultad">
          <label for="dificultad">Dificultad:</label>
@@ -83,43 +103,22 @@
 
       <div class="main">
          <div class="container">
-            <div class="playButtons">
-               <div class="counterGame">
-                  <span id="mine-counter">010</span>
+            <div id="board">
+               <div class="playButtons">
+                  <div class="counterGame">
+                     <span id="mine-counter">010</span>
+                  </div>
+                  <div class="resetGameButton">
+                     <span id="emoji" class="image">&#x1F600;</span>
+                  </div>
+                  <div class="timerGame">
+                     00:00
+                  </div>
                </div>
-               <div class="resetGameButton">
-                  <span id="emoji" class="image">&#x1F600;</span>
+                  <div class="grid">
                </div>
-               <div class="timerGame">
-                  00:00
-               </div>
-            </div>
-            <div class="grid">
-            </div>
-            <button id="openBtn" class="rankingBtn">Ver Ranking</button>
-            <div id="rankingModal" class="modal">
-               <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <h2>Ranking</h2>
-                  <label for="ordenarRanking">Ordenar por:</label>
-                     <select id="ordenarRanking">
-                     <option value="score">Puntaje</option>
-                     <option value="date">Fecha</option>
-                  </select>
-                  <table class="rankingTable">
-                     <thead>
-                        <tr>
-                           <th>Jugador</th>
-                           <th>Puntaje</th>
-                           <th>Duración</th>
-                           <th>Fecha</th>
-                        </tr>
-                     </thead>
-                     <tbody id="rankingBody"></tbody>
-                  </table>
-               </div>
-            </div>
-            <div id="toast" class="toast">
+               
+            
             </div>
          </div>
       </div>
